--- a/google-api-php-client--PHP8.0/composer.json
+++ b/google-api-php-client--PHP8.0/composer.json
@@ -5,6 +5,12 @@
     "keywords": ["google"],
     "homepage": "http://developers.google.com/api-client-library/php",
     "license": "Apache-2.0",
+    "config": {
+        "preferred-install": "dist",
+         "platform": {
+               "php": "8.02"
+             }
+      }
     "require": {
         "php": "^5.6",
         "google/auth": "^1.10",
